Alteração feita nos menu lateral

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -492,9 +492,9 @@
                         </div><!-- /content-breadcrumb -->
                         
                         <!-- content-body -->
-                        <div class="content-body">
-                            <!-- dashboar -->
-                            <!-- shortcut button -->
+<!--                        <div class="content-body">
+                             dashboar 
+                             shortcut button 
                             <div class="shortcut-group">
                                 <ul class="a-btn-group">
                                     <li>
@@ -516,7 +516,7 @@
                                             <span></span>
                                             <span><i class="icofont-envelope color-silver-dark"></i></span>
                                             <span class="color-silver-dark"><i class="icofont-envelope-alt color-teal"></i></span>
-                                            <div class="badge badge-info">9</div> <!--don't use span here!-->
+                                            <div class="badge badge-info">9</div> don't use span here!
                                         </a>
                                     </li>
                                     <li>
@@ -524,7 +524,7 @@
                                             <span></span>
                                             <span><i class="icofont-barcode color-silver-dark"></i></span>
                                             <span class="color-silver-dark"><i class="icofont-shopping-cart color-red"></i></span>
-                                            <div class="label label-important">2</div> <!--don't use span here!-->
+                                            <div class="label label-important">2</div> don't use span here!
                                         </a>
                                     </li>
                                     <li>
@@ -536,11 +536,11 @@
                                     </li>
                                     <li class="clearfix"></li>
                                 </ul>
-                            </div><!-- /shortcut button -->
+                            </div> /shortcut button 
                             
                             <div class="divider-content"><span></span></div>
                             
-                            <!-- tab stat -->
+                             tab stat 
                             <div class="box-tab corner-all">
                                 <div class="box-header corner-top">
                                     <div class="header-control pull-right">
@@ -599,28 +599,28 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div><!-- /tab stat -->
+                            </div> /tab stat 
 
-                            <!-- tab resume content -->
+                             tab resume content 
                             <div class="row-fluid">
-                                <!-- tab resume update -->
+                                 tab resume update 
                                 <div class="span6">
                                     <div class="box-tab corner-all">
                                         <div class="box-header corner-top">
-                                            <!--tab action-->
+                                            tab action
                                             <div class="header-control pull-right">
                                                 <a data-box="collapse"><i class="icofont-caret-up"></i></a>
                                                 <a data-box="close" data-hide="rotateOutDownLeft">&times;</a>
                                             </div>
                                             <ul class="nav nav-pills">
-                                                <!--tab menus-->
+                                                tab menus
                                                 <li class="active"><a data-toggle="tab" href="#recent-orders">Recent Orders</a></li>
                                                 <li><a data-toggle="tab" href="#recent-posts">Recent Posts</a></li>
-                                                <li><a data-toggle="tab" href="#recent-comments">Recent Comments</a></li><!--/tab menus-->
+                                                <li><a data-toggle="tab" href="#recent-comments">Recent Comments</a></li>/tab menus
                                             </ul>
                                         </div>
                                         <div class="box-body">
-                                            <!-- widgets-tab-body -->
+                                             widgets-tab-body 
                                             <div class="tab-content">
                                                 <div class="tab-pane fade in active" id="recent-orders">
                                                     <div class="media">
@@ -757,10 +757,10 @@
                                                     </div>
                                                     <a href="#" class="btn btn-small btn-link pull-right">View all &rarr;</a>
                                                 </div>
-                                            </div><!--/widgets-tab-body-->
-                                        </div><!--/box-body-->
-                                    </div><!--/box-tab-->
-                                </div><!-- tab resume update -->
+                                            </div>/widgets-tab-body
+                                        </div>/box-body
+                                    </div>/box-tab
+                                </div> tab resume update 
                                 <div class="span6">
                                     <div class="box corner-all">
                                         <div class="box-header corner-top grd-white">
@@ -798,9 +798,9 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div><!-- tab stat -->
+                            </div> tab stat 
                             
-                            <!--schedule-->
+                            schedule
                             <div class="box corner-all">
                                 <div class="box-header grd-white color-silver-dark corner-top">
                                     <div class="header-control">
@@ -812,10 +812,10 @@
                                     <div id="schedule"></div>
                                 </div>
                             </div>
-                            <!--schedule-->
+                            schedule
                             
-                            <!--/dashboar-->
-                        </div><!--/content-body -->
+                            /dashboar
+                        </div>/content-body -->
                     </div><!-- /content -->
                 </div><!-- /span content -->
                 
