Alteração feita nos menu lateral

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -10,7 +10,7 @@
         <meta name="author" content="stilearning">
 
         <!-- google font -->
-        <link href="/administrator/css7559.css?family=Aclonica:regular" rel="stylesheet" type="text/css" />
+        <link href="/administrator/css/css7559.css?family=Aclonica:regular" rel="stylesheet" type="text/css" />
 
         <!-- styles -->
         <link href="/administrator/css/bootstrap.css" rel="stylesheet">
