Atualização de pacote

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -4,7 +4,7 @@
 <!-- Mirrored from wbpreview.com/previews/WB0TFD2S0/ by HTTrack Website Copier/3.x [XR&CO'2008], Sat, 23 Mar 2013 19:09:29 GMT -->
 <head>
         <meta charset="utf-8">
-        <title>Dashboard - Stilearn Admin Bootstrap</title>
+        <title>SIMOVA - Sistema de Monitoramento de Vacinas</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="stilearning">
@@ -42,7 +42,7 @@
                     <!--panel site-name-->
                     <div class="span2">
                         <div class="panel-sitename">
-                            <h2><a href="/admin"><span class="color-teal">Sti</span>learn</a></h2>
+                            <h2><a href="/admin"><span class="color-teal">SIM</span>OVA</a></h2>
                         </div>
                     </div>
                     <!--/panel name-->
@@ -226,7 +226,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="interface.html" title="interface">
+                                <a title="funcionário">
                                     <div class="helper-font-24">
                                         
                                     </div>
@@ -236,14 +236,14 @@
                                     <li class="title muted">Opções</li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="/admin/pessoa/consulta-funcionario" title="form element" class="corner-all">
+                                        <a href="/admin/pessoa/consulta-funcionario" title="Consultar Funcionário" class="corner-all">
                                             <i class="icofont-file"></i>
                                             <span class="sidebar-text">Consultar</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="code_editor.html" title="code editor" class="corner-all">
+                                        <a href="/admin/pessoa/cadastro-funcionario" title="Cadastrar Funcionário" class="corner-all">
                                             <i class="icofont-book"></i>
                                             <span class="sidebar-text">Cadastrar</span>
                                         </a>
@@ -252,7 +252,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a title="form">
+                                <a title="Paciente">
                                     <!--<div class="badge badge-important">3</div>-->
                                     <div class="helper-font-24">
                                        
@@ -263,14 +263,14 @@
                                     <li class="title muted">Opções</li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="form.html" title="form element" class="corner-all">
+                                        <a href="/admin/pessoa/consulta-paciente" title="Consultar Paciente" class="corner-all">
                                             <i class="icofont-file"></i>
                                             <span class="sidebar-text">Consultar</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="code_editor.html" title="code editor" class="corner-all">
+                                        <a href="/admin/pessoa/cadastro-paciente" title="Cadastrar Paciente" class="corner-all">
                                             <i class="icofont-book"></i>
                                             <span class="sidebar-text">Cadastrar</span>
                                         </a>
@@ -280,7 +280,7 @@
                             </li>
                             
                             <li>
-                                <a href="charts.html" title="charts">
+                                <a title="Unidades de Saúde">
                                     <div class="helper-font-24">
                                         
                                     </div>
@@ -290,14 +290,14 @@
                                     <li class="title muted">Opções</li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="form.html" title="form element" class="corner-all">
+                                        <a href="/admin/unidade/consulta-unidade" title=" Consultar Unidades de Saúde" class="corner-all">
                                             <i class="icofont-file"></i>
                                             <span class="sidebar-text">Consultar</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="code_editor.html" title="code editor" class="corner-all">
+                                        <a href="/admin/unidade/cadastro-unidade" title="Cadastrar Unidade de Saúde" class="corner-all">
                                             <i class="icofont-book"></i>
                                             <span class="sidebar-text">Cadastrar</span>
                                         </a>
@@ -306,7 +306,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="tables.html" title="table">
+                                <a title="Vacinas">
                                     <div class="helper-font-24">
                                        
                                     </div>
@@ -316,14 +316,14 @@
                                     <li class="title muted">Opções</li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="form.html" title="form element" class="corner-all">
+                                        <a href="/admin/vacina/consulta-vacina" title="Consultar Vacinas" class="corner-all">
                                             <i class="icofont-file"></i>
                                             <span class="sidebar-text">Consultar</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="code_editor.html" title="code editor" class="corner-all">
+                                        <a href="/admin/vacina/cadastro-vacina" title="Cadastrar Vacinas" class="corner-all">
                                             <i class="icofont-book"></i>
                                             <span class="sidebar-text">Cadastrar</span>
                                         </a>
@@ -332,7 +332,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="grids.html" title="grids">
+                                <a title="Cartão de Vacinas">
                                     <div class="helper-font-24">
                                       
                                     </div>
@@ -342,14 +342,14 @@
                                     <li class="title muted">Opções</li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="form.html" title="form element" class="corner-all">
+                                        <a href="/admin/cartao/consulta-cartao" title="Consultar Cartão de Vacinas" class="corner-all">
                                             <i class="icofont-file"></i>
                                             <span class="sidebar-text">Consultar</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="code_editor.html" title="code editor" class="corner-all">
+                                        <a href="/admin/cartao/cadastro-cartao" title="Cadastrar Cartão de Vacinas" class="corner-all">
                                             <i class="icofont-book"></i>
                                             <span class="sidebar-text">Cadastrar</span>
                                         </a>
@@ -358,7 +358,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="icons.html" title="icons">
+                                <a title="Campanhas">
                                     <div class="helper-font-24">
                                         
                                     </div>
@@ -368,14 +368,14 @@
                                     <li class="title muted">Opções</li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="form.html" title="form element" class="corner-all">
+                                        <a href="/admin/campanha/consulta-campanha" title="Consultar Campanhas" class="corner-all">
                                             <i class="icofont-file"></i>
                                             <span class="sidebar-text">Consultar</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="code_editor.html" title="code editor" class="corner-all">
+                                        <a href="/admin/campanha/cadastro-campanha" title="Cadastrar Campanhas" class="corner-all">
                                             <i class="icofont-book"></i>
                                             <span class="sidebar-text">Cadastrar</span>
                                         </a>
@@ -1131,6 +1131,8 @@
         <script src="/administrator/js/wysihtml5/wysihtml5-0.3.0.js"></script>
         <script src="/administrator/js/wysihtml5/bootstrap-wysihtml5.js"></script>
         <script src="/administrator/js/calendar/fullcalendar.js"></script> <!-- this plugin required jquery ui-->
+        <script src="/administrator/js/pessoa.js"></script> <!-- this plugin required jquery ui-->
+        <script src="/assets/js/confirm-action.js"></script> <!-- this plugin required jquery ui-->
 
         <!-- required stilearn template js, for full feature-->
         <script src="/administrator/js/holder.js"></script>
