Atualização de pacote

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -42,7 +42,7 @@
                     <!--panel site-name-->
                     <div class="span2">
                         <div class="panel-sitename">
-                            <h2><a href="/admin"><span class="color-teal">SIM</span>OVA</a></h2>
+                            <a href="/admin"><img src="/assets/imagens/simova_logo.png"></img></a>
                         </div>
                     </div>
                     <!--/panel name-->
