Correção dos formularios de cadastro.

--- a/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
@@ -169,6 +169,12 @@
                         </div>
                     </div>
                     <div class="control-group">
+                        <label for="inputEmail" class="control-label">Unidade de Saúde:</label>
+                        <div class="controls">
+                            <?php echo $this->form->cod_un_saude ?>
+                        </div>
+                    </div>
+                    <div class="control-group">
                         <label for="inputEmail" class="control-label">Status:</label>
                         <div class="controls">
                             <?php echo $this->form->Status->cod_status ?>
