Adição de script referente a apresentação do calendario.

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -1108,12 +1108,13 @@
 
         <!-- javascript
         ================================================== -->
-        <script src="/administrator/widgets.js"></script>
         <script src="/administrator/js/jquery.js"></script>
         <script src="/administrator/js/jquery-ui.min.js"></script>
         <script src="/administrator/js/bootstrap.js"></script>
         <script src="/administrator/js/uniform/jquery.uniform.js"></script>
+        <script src="/administrator/js/widgets.js"></script>
         <script src="/administrator/js/peity/jquery.peity.js"></script>
+        <script src="/administrator/js/datepicker/bootstrap-datepicker.js"></script>
 
         <script src="/administrator/js/select2/select2.js"></script>
         <script src="/administrator/js/knob/jquery.knob.js"></script>
