Correção dos caminhos para arquivos css

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -22,6 +22,7 @@
         <link href="/administrator/css/font-awesome.css" rel="stylesheet">
         <link href="/administrator/css/animate.css" rel="stylesheet">
         <link href="/administrator/css/uniform.default.css" rel="stylesheet">
+        <link href="/administrator/css/datepicker.css" rel="stylesheet">
 
         <link href="/administrator/css/select2.css" rel="stylesheet">
         <link href="/administrator/css/fullcalendar.css" rel="stylesheet">
@@ -482,9 +483,9 @@
                                 <li class="active">Data elements</li>
                             </ul><!--/breadcrumb-->
                         </div><!-- /content-breadcrumb -->
-                        <div class="content-body">
+                        <section class="content-body">
                             <?php echo $this->layout()->content ?>
-                        </div>
+                        </section>
                         <!-- content-body -->
 <!--                        <div class="content-body">
                              dashboar 
