--- a/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
@@ -1,43 +1,13 @@
-
-<style type="text/css">
-
-    h1#aa{
-        background-color: #ffcc99;
-        text-align: center;
-        font-size: 20pt;
-        width: 550pt;
-        margin: 10px 0 30px 5px;
-
-    }
-    li a:hover{
-        color: #CB0101;
-
-    }
-    li a:active{
-        border-style: none;
-    }
-
-    .tabbable{
-        height: auto;
-    }
-
-    div #content{
-        width: 745px;
-        height:800px;
-        margin: 0 0 0 355px;
-        padding: 40px;
-        background: #fff;
-    }
-
-
-
-</style>
-
-
-
-<div class="span9">
-    <h1 id="aa">Cadastrar Paciente</h1>
-
+<script type="text/javascript" src="/admin/js/pessoa.js"></script>
+<fieldset>
+    <legend>Cadastrar Funcionários</legend>
+    <?php
+    if ($this->mensagem):
+        ?>
+        <div class="alert <?php echo $this->mensagem['type'] ?>"><?php echo $this->mensagem['mensagem'] ?></div>
+        <?php
+    endif;
+    ?>
 
     <div style="margin-bottom: 18px;" class="tabbable">
         <ul class="nav nav-tabs">
@@ -45,13 +15,12 @@
             <li class=""><a data-toggle="tab" href="#tab2">Endereço</a></li>
             <li class=""><a data-toggle="tab" href="#tab3">Dados Complementares</a></li>
         </ul>
-        <form class="bs-docs-example form-horizontal">
-            <div style="padding-bottom: 9px; border-bottom: 1px solid #ddd;" class="tab-content">
+        <form class="form-horizontal" method="post">
+            <div class="tab-content">
                 <div id="tab1" class="tab-pane active">
 
                     <!--INICIO DO PRIMEIRO FORM-->
 
-                    <p>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Nome Completo:</label>
                         <div class="controls">
@@ -61,19 +30,28 @@
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Nome do Pai:</label>
                         <div class="controls">
-                           <?php echo $this->form->Nome_Pae ?>
+                            <?php echo $this->form->nome_pai ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Nome da Mãe:</label>
                         <div class="controls">
-                            <?php echo $this->form->Nome_Mae ?>
+                            <?php echo $this->form->nome_mae ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Data de Nascimento:</label>
                         <div class="controls">
-                            <?php echo $this->form->dt_nasc ?>
+                            <div date-date-format="mm-dd-yyyy" data-date="01-01-2013" data-form="datepicker" class="input-append date">
+                                <?php echo $this->form->dt_nasc ?>
+                                <span class="add-on"><i class="icon-th"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Nº Registro de Nascimento:</label>
+                        <div class="controls">
+                            <?php echo $this->form->registro_nasc ?>
                         </div>
                     </div>
                     <div class="control-group">
@@ -85,181 +63,149 @@
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Sexo:</label>
                         <div class="controls">
-                                <?php echo $this->form->sexo ?>
+                            <?php echo $this->form->sexo ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">RG Nº:</label>
                         <div class="controls">
-                            <?php echo $this->form->RG ?>
+                            <?php echo $this->form->rg ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">CPF Nº:</label>
                         <div class="controls">
-                           <?php echo $this->form->CPF ?>
+                            <?php echo $this->form->cpf ?>
                         </div>
                     </div>
-                    <div class="control-group">
-
-                        <div class="controls">
-                            <a class="btn btn-primary" href="#tab2" data-toggle="tab"><i class="icon-forward icon-white"></i></a>
+                    <div class="form-actions">
+                        <div class="control-group">
+                            <a class="btn btn-primary" href="#tab2" data-toggle="tab">Continuar <i class="icon-forward icon-white"></i></a>
                         </div>
                     </div>
 
                 </div> <!--FIM DO PRIMEIRO MENU-->
 
-
                 <div id="tab2" class="tab-pane">
 
                     <!--INICIO DO SEGUNDO FORM-->
 
-                    <p>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Rua:</label>
                         <div class="controls">
-                            <input type="text" placeholder="Text input">
+                            <?php echo $this->form->Endereco->endereco ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Complemento: </label>
                         <div class="controls">
-                            <input type="text" placeholder="Text input">
+                            <?php echo $this->form->Endereco->complemento ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Número:</label>
                         <div class="controls">
-                            <input type="text" placeholder="Text input">
+                            <?php echo $this->form->Endereco->numero ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Bairro:</label>
                         <div class="controls">
-                            <input type="text" placeholder="Text input">
+                            <?php echo $this->form->Endereco->bairro ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">CEP:</label>
                         <div class="controls">
-                            <input type="text" placeholder="Text input">
+                            <?php echo $this->form->Endereco->cep ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">UF:</label>
                         <div class="controls">
-                            <select>
-                                <option value="0">Selecione o Estado</option>
-                                <option value="ac">Acre</option>
-                                <option value="al">Alagoas</option>
-                                <option value="ap">Amapá</option>
-                                <option value="am">Amazonas</option>
-                                <option value="ba">Bahia</option>
-                                <option value="ce">Ceará</option>
-                                <option value="df">Distrito Federal</option>
-                                <option value="es">Espirito Santo</option>
-                                <option value="go">Goiás</option>
-                                <option value="ma">Maranhão</option>
-                                <option value="ms">Mato Grosso do Sul</option>
-                                <option value="mt">Mato Grosso</option>
-                                <option value="mg">Minas Gerais</option>
-                                <option value="pa">Pará</option>
-                                <option value="pb">Paraíba</option>
-                                <option value="pr">Paraná</option>
-                                <option value="pe">Pernambuco</option>
-                                <option value="pi">Piauí</option>
-                                <option value="rj">Rio de Janeiro</option>
-                                <option value="rn">Rio Grande do Norte</option>
-                                <option value="rs">Rio Grande do Sul</option>
-                                <option value="ro">Rondônia</option>
-                                <option value="rr">Roraima</option>
-                                <option value="sc">Santa Catarina</option>
-                                <option value="sp">São Paulo</option>
-                                <option value="se">Sergipe</option>
-                                <option value="to">Tocantins</option>
-                            </select>
+                            <?php echo $this->form->Endereco->cod_uf ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Cidade:</label>
                         <div class="controls">
-                            <input type="text" placeholder="Text input">
+                            <?php echo $this->form->Endereco->cod_cid ?>
                         </div>
                     </div>
 
-                    <div class="control-group">
-
-                        <div class="controls">
-                            <a class="btn btn-primary" href="#tab3" data-toggle="tab"><i class="icon-forward icon-white"></i></a>
-                            <a class="btn btn-primary" href="#tab1" data-toggle="tab"><i class="icon-backward icon-white"></i></a>
+                    <div class="form-actions">
+                        <div class="control-group">
+                            <a class="btn btn-primary" href="#tab1" data-toggle="tab">Voltar <i class="icon-backward icon-white"></i></a>
+                            <a class="btn btn-primary" href="#tab3" data-toggle="tab">Continuar <i class="icon-forward icon-white"></i></a>
                         </div>
                     </div>
                 </div> <!--FIM DO SEGUNDO MENU-->
 
-
                 <div id="tab3" class="tab-pane">
 
                     <!--INICIO DO TERCEIRO FORM-->
-
-                    
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Unidade de Saúde:</label>
+                        <div class="controls">
+                            <?php echo $this->form->cod_un_saude ?>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Status:</label>
+                        <div class="controls">
+                            <?php echo $this->form->Status->cod_status ?>
+                        </div>
+                    </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Telefone residêncial:</label>
                         <div class="controls">
-                            <input type="text" placeholder="Text input">
+                            <?php echo $this->form->Telefone->num_tel1 ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Telefone celular:</label>
                         <div class="controls">
-                            <input type="text" placeholder="Text input">
+                            <?php echo $this->form->Telefone->num_tel2 ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">E-mail:</label>
                         <div class="controls">
-                            <input type="text" id="inputEmail" placeholder="Email">
+                            <?php echo $this->form->email ?>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Perfil:</label>
+                        <div class="controls">
+                            <?php echo $this->form->cod_perfil ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Usuário:</label>
                         <div class="controls">
-                            <input type="text" placeholder="Text input">
+                            <?php echo $this->form->Login->nome_login ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Senha:</label>
                         <div class="controls">
-                            <input type="password" id="inputPassword" placeholder="Password">
+                            <?php echo $this->form->Login->senha_login ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Confirmar-Senha:</label>
                         <div class="controls">
-                            <input type="password" id="inputPassword" placeholder="Password">
+                            <?php echo $this->form->Login->senha_login ?>
                         </div>
                     </div>
-                    <div class="control-group">
-
-                        <div class="controls">
+                    <div class="form-actions">
+                        <div class="control-group">
                             <button class="btn btn-info" type="submit">Salvar</button>
                             <button class="btn btn-info" type="reset">Limpar</button>
-
                         </div>
                     </div>
                 </div> <!--FIM DO TERCEIRO MENU-->
             </div>
         </form>
     </div>
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
+</fieldset>
