--- a/application/modules/admin/views/scripts/pessoa/consulta-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-paciente.phtml
@@ -41,8 +41,8 @@
                     <td><?php echo $paciente->rg ?></td>
                     <td><?php echo $paciente->cpf ?></td>
                     <td>
-                        <a href="/admin/pessoa/editar-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Alterar" class="btn btn-primary btn btn-mini"><i class="icon-pencil icon-white"></i></a>
-                        <a href="/admin/pessoa/excluir-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Excluir" class="btn btn-danger btn btn-mini confirm"><i class="icon-trash icon-white"></i></a>&nbsp;
+                        <a href="/admin/pessoa/editar-funcionario/cod_pessoa/<?php echo $paciente->cod_pessoa ?>" title="Alterar" class="btn btn-small"><i class="icon-edit"></i></a>
+                        <a href="/admin/pessoa/excluir-funcionario/cod_pessoa/<?php echo $paciente->cod_pessoa ?>" title="Excluir" class="btn btn-small confirm"><i class="icon-trash"></i></a>&nbsp;
                     </td>
                 </tr>
             <?php endforeach; ?>
