--- a/public/administrator/css/stilearn.css
+++ b/public/administrator/css/stilearn.css
@@ -11,7 +11,7 @@
     min-height: 50px;
     padding-top: 10px;
     z-index: 99;
-    background: #333333 url('../img/bg-body-bar.jpg');
+    background: #333333 url('/administrator/img/bg-body-bar.jpg');
     background-position:0 0;
     background-repeat:repeat no-repeat;
     border-bottom: 1px solid #2E2E2E;
@@ -311,7 +311,7 @@ ul.dropdown-notification > li.dropdown-header:hover{
     display: block;
     height: 100%;
     top: 60px;
-    background: #333333 url('../img/bg-body-bar.jpg');
+    background: #333333 url('/administrator/img/bg-body-bar.jpg');
     border: 1px solid #2E2E2E;
     width: 6.382978723404255%;
     *width: 6.329787234042553%;
@@ -404,7 +404,7 @@ ul.dropdown-notification > li.dropdown-header:hover{
     display: block;
     height:100%;
     top: 60px;
-    background: #FFFFFF url('../img/noise.png');
+    background: #FFFFFF url('/administrator/img/noise.png');
 /*    width: 14.893617021276595%;
     *width: 14.840425531914894%;*/
     width: 16%;
@@ -418,7 +418,7 @@ ul.dropdown-notification > li.dropdown-header:hover{
 .sidebar-right > .sidebar-right-header{
     padding: 10px 20px 10px 20px;
     border-bottom: 1px solid #CDCDCD;
-    background: #E9E9E9 url('../img/bg-content-header.png');
+    background: #E9E9E9 url('/administrator/img/bg-content-header.png');
     color: #626262;
     height: 42px;
     max-height: 42px;
@@ -472,7 +472,7 @@ ul.dropdown-notification > li.dropdown-header:hover{
     font-size: .8em;
 }
 .sidebar-right > .sidebar-right-control{
-    background: #E9E9E9 url('../img/bg-content-header.png');
+    background: #E9E9E9 url('/administrator/img/bg-content-header.png');
     font-size: .8em;
     height: 38px;
     margin: 0px;
@@ -514,7 +514,7 @@ ul.dropdown-notification > li.dropdown-header:hover{
     padding: 0px 10px;
 }
 .sidebar-right-control > ul.sr-control-item > li.active{
-    background: #FFFFFF url('../img/noise.png');
+    background: #FFFFFF url('/administrator/img/noise.png');
 }
 .sidebar-right-control > ul.sr-control-item > li.active:after{
     position: absolute;
@@ -549,7 +549,7 @@ ul.dropdown-notification > li.dropdown-header:hover{
     list-style: none;
 }
 .side-contact ul.contact-list li.contact-alt:hover{
-    background: #f1f1f1 url('../img/noise.png');
+    background: #f1f1f1 url('/administrator/img/noise.png');
 }
 .side-contact ul.contact-list .contact-alt:first-child{
     border: 1px solid #CDCDCD;
@@ -560,7 +560,7 @@ ul.dropdown-notification > li.dropdown-header:hover{
 }
 .side-contact ul.contact-list .contact-alt.active{
     border-left: none;
-    background: #FFFFFF url('../img/noise.png');
+    background: #FFFFFF url('/administrator/img/noise.png');
     color: #00A0B1;
 }
 
@@ -612,14 +612,14 @@ ul.dropdown-notification > li.dropdown-header:hover{
     border: 1px solid #CDCDCD;
     border-bottom: none;
     overflow: hidden;
-    background: #FFFFFF url('../img/noise.png');
+    background: #FFFFFF url('/administrator/img/noise.png');
 }
 .side-chat .chat-header{
     padding: 10px 5px;
     border-bottom: 1px solid #CDCDCD;
     height: 24px;
     color: #626262;
-    background: #f1f1f1 url('../img/noise.png');
+    background: #f1f1f1 url('/administrator/img/noise.png');
 }
 .side-chat .chat-header *{
     margin: auto;
@@ -705,7 +705,7 @@ ul.dropdown-notification > li.dropdown-header:hover{
 .side-task > .task{
     margin: 0px;
     padding: 5px;
-    background: #EDEDED url('../img/bg-content.jpg');
+    background: #EDEDED url('/administrator/img/bg-content.jpg');
     border-bottom: 1px solid #CDCDCD;
     white-space: nowrap;
     position: relative;
@@ -764,7 +764,7 @@ ul.dropdown-notification > li.dropdown-header:hover{
 }
 .side-activity-header p{
     display: inline-block;
-    background: #FFFFFF url('../img/noise.png');
+    background: #FFFFFF url('/administrator/img/noise.png');
     padding-right: 5px;
 }
 
@@ -817,16 +817,16 @@ ul.dropdown-notification > li.dropdown-header:hover{
     white-space: nowrap;
     border: 1px solid #CDCDCD;
     border-top: none;
-    background: #EDEDED url('../img/bg-content.jpg');
+    background: #EDEDED url('/administrator/img/bg-content.jpg');
 }
 
 .nav-side > li:hover{
-    background: #f1f1f1 url('../img/noise.png');
+    background: #f1f1f1 url('/administrator/img/noise.png');
     color: #008299;
 }
 
 .nav-side > li.active{
-    background: #FFFFFF url('../img/noise.png');
+    background: #FFFFFF url('/administrator/img/noise.png');
     border-left: none;
     border-right: 5px solid #008299;
 }
@@ -1023,7 +1023,7 @@ ul.dropdown-notification > li.dropdown-header:hover{
     margin-left: -3.4%;
     margin-bottom: -62px;
     display: block;
-    background: #EDEDED url('../img/bg-content.jpg');
+    background: #EDEDED url('/administrator/img/bg-content.jpg');
     border: 1px solid #CDCDCD;
     border-left: none;
     padding-bottom: 0px;
@@ -1033,7 +1033,7 @@ ul.dropdown-notification > li.dropdown-header:hover{
 .content > .content-header{
     padding: 10px 20px 10px 20px;
     border-bottom: 1px solid #CDCDCD;
-    background: #E9E9E9 url('../img/bg-content-header.png');
+    background: #E9E9E9 url('/administrator/img/bg-content-header.png');
     color: #626262;
 }
 
@@ -1123,7 +1123,7 @@ ul.dropdown-notification > li.dropdown-header:hover{
     list-style: none;
 }
 .content-breadcrumb > .breadcrumb{
-    background: #FFFFFF url('../img/noise.png');
+    background: #FFFFFF url('/administrator/img/noise.png');
     font-size: .8em;
     margin: 0px;
     border-bottom: 1px solid #CDCDCD;
@@ -1165,7 +1165,7 @@ ul.dropdown-notification > li.dropdown-header:hover{
 .content > .content-body{
     padding: 40px 20px 40px 20px;
     font-size: .9em;
-    background: #FFFFFF url('../img/noise.png');
+    background: #FFFFFF url('/administrator/img/noise.png');
 }
 /* end content-body */
 
@@ -1208,7 +1208,7 @@ ul.dropdown-notification > li.dropdown-header:hover{
     border-top: none;
     position: relative;
     padding: 10px 20px 10px 20px;
-    background: #FFFFFF url('../img/noise.png');
+    background: #FFFFFF url('/administrator/img/noise.png');
 }
 .box > .box-body  form  .form-actions{
     margin-left: -20px;
@@ -1232,7 +1232,7 @@ ul.dropdown-notification > li.dropdown-header:hover{
     border: 1px solid #CDCDCD;
     padding: 5px;
     margin-bottom: 40px;
-    background: #FFFFFF url('../img/noise.png');
+    background: #FFFFFF url('/administrator/img/noise.png');
 }
 
 .box-tab > .box-header .nav-pills{
@@ -1870,7 +1870,7 @@ ul.b-btn-group li{
     opacity:0;
 }
 .a-btn span:nth-child(1){
-    background: transparent; /*url('../img/arrow_down.png') no-repeat center center;*/
+    background: transparent; /*url('/administrator/img/arrow_down.png') no-repeat center center;*/
     opacity:0.2;
 }
 .a-btn .badge, .a-btn .label{
@@ -2327,7 +2327,7 @@ ul.b-btn-group li{
     list-style: none;
 }
 .message-contact ul.contact-list li.contact-alt:hover{
-    background: #f1f1f1 url('../img/noise.png');
+    background: #f1f1f1 url('/administrator/img/noise.png');
 }
 
 .message-contact ul.contact-list .contact-alt{
@@ -2412,7 +2412,7 @@ ul.b-btn-group li{
 .message-content, .new-message{
     border-bottom: none;
     overflow: hidden;
-    background: #FFFFFF url('../img/noise.png');
+    background: #FFFFFF url('/administrator/img/noise.png');
 }
 .message-content .msg-body{
     height: 400px;
@@ -2439,18 +2439,18 @@ ul.b-btn-group li{
 }
 .msg-body .msg-in:hover,
 .msg-body .msg-out:hover{
-    background: #f1f1f1 url('../img/noise.png');
+    background: #f1f1f1 url('/administrator/img/noise.png');
 }
 
 .msg-body .msg-in.selected,
 .msg-body .msg-out.selected{
     border-top: 1px solid #CDCDCD;
     border-bottom:  1px solid #A1A1A1;
-    background: #DDD url('../img/noise.png');
+    background: #DDD url('/administrator/img/noise.png');
 }
 .msg-body .msg-in.selected:hover,
 .msg-body .msg-out.selected:hover{
-    background: #DDD url('../img/noise.png');
+    background: #DDD url('/administrator/img/noise.png');
 }
 
 .msg-body .msg-in .msg-time,
@@ -2512,7 +2512,7 @@ ul.b-btn-group li{
 a[rel=to-top]{
     position: fixed;
     right: 10px;
-    background: #E9E9E9 url('../img/bg-content-header.png');
+    background: #E9E9E9 url('/administrator/img/bg-content-header.png');
     color: #626262;
     bottom: 0px;
     margin: 0px;
@@ -2531,6 +2531,6 @@ a[rel=to-top]{
 
 a[rel=to-top]:hover{
     color: #F1F1F1;
-    background: #008299 url('../img/noise.png');
+    background: #008299 url('/administrator/img/noise.png');
     border: 1px solid #00a0b1;
 }
