Completa funcionalidade de  exclusao e cadastro de paciente e funcionario.

--- a/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
@@ -1,6 +1,6 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
 <fieldset>
-    <legend>Cadastrar Funcionários</legend>
+    <legend>Cadastrar Pacientes</legend>
     <?php
     if ($this->mensagem):
         ?>
